--- a/src/css/modules/header.css
+++ b/src/css/modules/header.css
@@ -9,9 +9,9 @@
     color: var(--white);
     z-index: 3;
     @media (--lg) {
-        height: 11rem;
-        padding: 2.125rem 0;
-        border-top: 3rem solid var(--white);
+        height: 10rem;
+        background-color: transparent;
+        border-top: 2.5rem solid var(--blue);
     }
 }
 
@@ -53,8 +53,12 @@
 .header__container {
     @mixin container;
     @media (--lg) {
+        padding: 0 1rem;
         position: relative;
         height: 100%;
+    }
+    @media (--xl) {
+        padding: 0 2rem;
     }
     @nest .header--collapsed & {
         @media (--lg) {
@@ -70,7 +74,6 @@
     width: 10rem;
     @media (--lg) {
         width: 17rem;
-        margin-left: 5%;
     }
     @nest .header--collapsed & {
         position: absolute;
@@ -209,12 +212,13 @@
     color: var(--blue);
     @media (--lg) {
         position: absolute;
-        top: -5.125rem;
+        top: -3.625rem;
         right: 2rem;
         margin: 0;
-        padding: 1rem 3rem 1rem 0;
-        background-color: var(--blue);
+        padding: .6rem 2rem .6rem 0;
+        background-color: var(--blue-dark);
         color: var(--white);
+        z-index: 1;
     }
     @nest .header--collapsed & {
         @media (--lg) {
@@ -259,9 +263,10 @@
     font-size: 0.875rem;
     @media (--lg) {
         width: 0;
-        padding: 0 0 0 3rem;
+        padding: 0 0 0 2rem;
         transition: width var(--transition);
         font-size: 1.5rem;
+        z-index: 1;
     }
     &::placeholder {
         color: var(--blue);
@@ -330,8 +335,12 @@
         justify-content: space-between;
         position: absolute;
         right: 0;
-        bottom: 0rem;
+        bottom: 1.8rem;
+        width: calc(100% * 0.65 + 3rem);
+    }
+    @media(--xl) {
         width: calc((100% - 4rem) * 0.65 + 2rem);
+        font-size: 1.5rem;
     }
     @nest .header--collapsed & {
         @media (--lg) {
@@ -353,6 +362,16 @@
     @media (--lg) {
         padding-right: 2rem;
         border: 0;
+
+        &:last-of-type {
+            padding-right: 1rem;
+        }
+    }
+
+    @media (--lg) {
+        &:last-of-type {
+            padding-right: 2rem;
+        }
     }
 }
 
@@ -362,6 +381,7 @@
     border: 0;
     @media (--lg) {
         border-bottom: 0.5rem solid transparent;
+        letter-spacing: .05rem;
     }
     &:hover {
         @media (--lg) {
@@ -387,7 +407,7 @@
     @media (--lg) {
         display: flex;
         position: absolute;
-        top: -2.125rem;
+        top: -0.95rem;
         left: 0;
         margin: 0;
         transform: translateY(-100%);
@@ -414,11 +434,12 @@
     @media (--lg) {
         display: inline;
         padding: 0;
-        color: var(--blue);
+        color: var(--gold);
+        letter-spacing: .03rem;
     }
     &:hover {
         @media (--lg) {
-            border-bottom: 0.25em solid;
+            border-bottom: 0.2em solid white;
         }
     }
 }
