--- a/src/css/modules/hero.css
+++ b/src/css/modules/hero.css
@@ -15,6 +15,9 @@
         height: 100%;
         background-image: none;
         z-index: 1;
+        @media (--lg) {
+            display: none;
+        }
     }
 }
 
