--- a/src/css/modules/card.css
+++ b/src/css/modules/card.css
@@ -43,6 +43,31 @@
   }
 }
 
+.card--outline-blue {
+  position: relative;
+  transition: box-shadow var(--transition);
+
+&::before {
+   content: '';
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   opacity: 0;
+   box-shadow: 0 0 0 0.5rem var(--blue), 0.125rem 0.125rem 0.5rem 0.5rem var(--shadow);
+ }
+
+&:hover {
+   z-index: 1;
+
+&::before {
+   transition: opacity var(--transition);
+   opacity: 1;
+ }
+}
+}
+
 .card__image {
   position: relative;
   overflow: hidden;
@@ -67,6 +92,18 @@
     height: 100%;
     background-color: var(--shadow);
   }
+}
+
+.card__image--overlay-yellow {
+&::after {
+   content: '';
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(231, 166, 20, .8);
+ }
 }
 
 .card__image__overlay {
