--- a/src/css/util/variables.css
+++ b/src/css/util/variables.css
@@ -14,10 +14,13 @@
   --blue-overlay: color(var(--blue) alpha(95%));
   --blue-overlay-light: color(var(--blue) alpha(75%));
   --gold: #e7a614;
+  --gold-overlay: color(var(--gold) alpha(95%));
   --white: #fff;
   --gray: #f2f2f2;
   --gray-darker: #ccc;
   --black: #000;
+  --red: #cd0e2c;
+  --red-overlay: color(var(--red) alpha(95%));
   --shadow: color(var(--black) alpha(50%));
 
   /* transitions */
