Finish two-card-module

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,6 +22,7 @@
 @import 'modules/button';
 @import 'modules/campus';
 @import 'modules/canvas';
+@import 'modules/stories/card';
 @import 'modules/card';
 @import 'modules/chart';
 @import 'modules/contact';
