--- a/src/css/modules/stories/card.css
+++ b/src/css/modules/stories/card.css
@@ -6,7 +6,7 @@
   background-color: var(--blue);
   padding: 2.5rem 2rem;
   width: 100%;
-  transition: all var(--transition-double);
+  transition: all var(--transition);
 
   @nest .card:hover > & {
     opacity: 0;
@@ -35,7 +35,7 @@
   width: 100%;
   height: 100%;
   padding: 4rem 5rem;
-  transition: all var(--transition-double);
+  transition: all var(--transition);
 
   @nest .card:hover > &, .card:focus > &, .card.focus-within > & {
     opacity: 1;
@@ -53,4 +53,57 @@
 
 .card__overlay-text {
   margin: 0 0 1rem;
+}
+
+.card__image__overlay--gold {
+  color: var(--gold);
+  left: 18%;
+}
+
+.card__image__overlay--text {
+  position: absolute;
+  top: 62.5%;
+  left: 18%;
+  max-width: 80%;
+  margin: 0;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  color: #fff;
+  z-index: 1;
+}
+
+.card__image__overlay--icon--container {
+  opacity: 0;
+  position: absolute;
+  top: 5%;
+  right: 2%;
+  color: var(--white);
+  background-color: var(--gold);
+  border-radius: 1000px;
+  height: 2rem;
+  width: 2rem;
+  margin: 0 0.75rem 0 0;
+  z-index: 1;
+  transition: opacity var(--transition);
+
+  @media (--lg) {
+    height: 3rem;
+    width: 3rem;
+  }
+
+  @nest .card__image:hover > & {
+    opacity: 1;
+  }
+}
+
+.card__image__overlay--icon {
+  height: 1.75rem;
+  width: 1.75rem;
+  margin: .15rem auto;
+
+  @media(--lg) {
+    height: 2.5rem;
+    width: 2.5rem;
+    margin: .25rem auto;
+  }
 }
