--- a/src/css/modules/stories/card.css
+++ b/src/css/modules/stories/card.css
@@ -1,12 +1,18 @@
 .card__text-container {
+  opacity: 0;
   position: absolute;
   bottom: 0;
   left: 0;
   color: var(--white);
   background-color: var(--blue);
-  padding: 2.5rem 2rem;
+  padding: .75rem 1.5rem;
   width: 100%;
   transition: all var(--transition);
+
+  @media (--md) {
+    opacity: 1;
+    padding: 2.5rem 2rem;
+  }
 
   @nest .card:hover > & {
     opacity: 0;
@@ -23,7 +29,7 @@
 }
 
 .card__overlay-container {
-  opacity: 0;
+  opacity: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -34,8 +40,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 4rem 5rem;
+  padding: 1rem 1rem;
   transition: all var(--transition);
+  overflow-y: auto;
+
+  @media (--md) {
+    opacity: 0;
+    padding: 4rem 5rem;
+  }
 
   @nest .card:hover > &, .card:focus > &, .card.focus-within > & {
     opacity: 1;
@@ -62,7 +74,7 @@
 
 .card__image__overlay--text {
   position: absolute;
-  top: 62.5%;
+  top: 70%;
   left: 18%;
   max-width: 80%;
   margin: 0;
@@ -70,6 +82,22 @@
   transform: translateY(-50%);
   color: #fff;
   z-index: 1;
+
+  @media (--sm) {
+    top: 58%;
+  }
+
+  @media (--md) {
+    top: 75%;
+  }
+
+  @media (--lg) {
+    top: 70%;
+  }
+
+  @media (--xl) {
+    top: 62.5%;
+  }
 }
 
 .card__image__overlay--icon--container {
