--- a/src/css/main.css
+++ b/src/css/main.css
@@ -42,6 +42,7 @@
 @import 'modules/link-list';
 @import 'modules/lists';
 @import 'modules/main';
+@import 'modules/stories/modal.css';
 @import 'modules/next-section';
 @import 'modules/overlay';
 @import 'modules/page-title';
