Switching to CSS solution, removed JS solution

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -57,6 +57,7 @@
 @import 'modules/text-widget';
 @import 'modules/video-embed';
 @import 'modules/vslider';
+@import 'modules/news';
 
 /* KCTCS modules */
 
