--- a/src/css/modules/tooltip.css
+++ b/src/css/modules/tooltip.css
@@ -21,6 +21,7 @@
   letter-spacing: 0rem;
 }
 
-.tooltip:hover .tooltiptext {
+.tooltip:hover .tooltiptext,
+.tooltip.focus-within .tooltiptext {
   visibility: visible;
 }
