--- a/src/css/modules/header.css
+++ b/src/css/modules/header.css
@@ -462,3 +462,96 @@
         display: none;
     }
 }
+
+
+.header__utility__submenu {
+    list-style: none;
+    padding: 0 0 0.5rem 0;
+}
+
+.header__utility__submenu__link {
+    display: inline-block;
+    text-decoration: none;
+    padding: 0.25rem .75rem 0.25rem 0;
+    border-bottom: 0;
+    white-space: nowrap;
+}
+
+.dropdown__button {
+    display: inline-block;
+    padding: .5rem 0;
+    cursor: pointer;
+}
+
+.dropdown__icon {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.dropdown__icon svg {
+    height: .75rem;
+    width: .75rem;
+}
+
+.dropdown__content:before {
+    position: absolute;
+    top: 0;
+    transform: translateY(-100%);
+    content: "";
+    width: 0;
+    height: 0;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-bottom: 8px solid white;
+}
+
+@media screen and (max-width: 48em){
+    .header__utility__link:hover {
+        border-bottom-width: 0;
+    }
+    .dropdown__icon {
+        display: none;
+    }
+    .dropdown__content {
+        display: block;
+    }
+}
+
+@media screen and (min-width: 48em) {
+    .splash__container .splash__block .splash__title {
+        font-size: 5rem !important;
+    }
+    .header__utility__link {
+        border-bottom-width: 0.25rem;
+    }
+    .header__utility__submenu {
+        position: absolute;
+        background: white;
+        bottom: 0rem;
+        transform: translateY(100%);
+        padding: 0.75rem;
+        box-shadow: -1px 2px 4px #00000091;
+    }
+    .header__utility__submenu__link {
+        color: #00467f;
+    }
+    .dropdown__icon {
+        display: inline-block;
+    }
+    .dropdown__content {
+        display: none;
+    }
+    .dropdown:hover .dropdown__content {
+        display: block
+    }
+}
+
+@media screen and (min-width: 64em) {
+    .dropdown__button {
+        display: inline;
+        padding: 0;
+    }
+    .scrolling-up .header--collapsed .dropdown__button {
+        color: #00467f;
+    }
+}
