Updated page title styles to accomodate new header on  Gateway Landing Page.

--- a/src/css/modules/page-title.css
+++ b/src/css/modules/page-title.css
@@ -76,3 +76,12 @@
     @mixin h6;
     margin: 0 0 1rem;
 }
+
+.page-title--no-margin {
+    margin-top: 0;
+}
+
+.page-title--no-margin::before {
+    display: none;
+}
+
