--- a/src/css/modules/hslider.css
+++ b/src/css/modules/hslider.css
@@ -36,6 +36,7 @@
     margin: 0;
     padding: 0;
     z-index: 1;
+    margin-top: 1rem;
 
     /*@media (--lg) {*/
     /*  flex-direction: column;*/
